@startuml
'stateless namespace EtAlii.Generators.Stateless.Tests
'stateless class SimpleExample
'stateless generate partial
[*] --> State1 : Start
State1 --> [*]
State1 : this is a string
State1 : this is another string
State1 -> State2 : Continue
State2 --> [*]

State2 -> State3 : DoState3
@enduml
